# miburi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: gtdm3_audiotext_ufl_25_beatx_allspk.yaml  gtdm3_audiotext_ufl_25_beatx_small.yaml  mimi_causalrvq_faceexp_25_smplxbeatx_fchunksize2.yaml  mimi_causalrvq_lowertransvel_25_smplxbeatx_fchunksize2.yaml  mimi_causalrvq_upperhands_25_smplxbeatxembody3d_fchunksize2.yaml
datasets/: DATASET.md
miburi/: __init__.py  download_assets.py  download_beatx_dataset.py  download_checkpoints.py  gest-server.py  motion_vis_server.py  run_gestinference.py
miburi/models/: __init__.py  compression.py  gesture_codec.py  gesture_lm.py  lm.py  lm_utils.py  loaders.py
miburi/modules/: conv.py  rope.py  seanet.py  transformer.py  wavelet.py
miburi/quantization/: __init__.py  base.py  core_vq.py  vq.py
miburi/utils/: compile.py  mixamo_character.py  motion_utils.py  viser_scene.py  visualize.py
scripts/: fit_mixamo_character.py  inspect_mixamo_hands.py  miburi-demo  miburi-demo-allspk  smooth_smplxmotion.py  test.py  test_face_motion_video.py  test_mixamo_face.py  test_mixamo_hand_views.py  test_mixamo_runtime.py  train.py  trainvalanalysis.py  visualize_codebook.py
scripts/trainers/: __init__.py  basecausalcodec_trainer.py  baseglm_trainer.py  faceexpcausalcodec_trainer.py  lowertranscausalcodec_trainer.py  uflgtdm3_trainer.py  upperbodycausalcodec_trainer.py
scripts/trainers/dataloaders/: __init__.py  unified_dataset.py
scripts/trainers/utils/: config.py  distributed.py  loss_factory.py  metrics.py  (+6 more)
(+21 files in other folders)
